fixed the side bars of documents.html, estimate new user.html

--- a/client-doc-view.html
+++ b/client-doc-view.html
@@ -337,7 +337,7 @@ section.billing-data-table { margin-top: 3em;
                         <div class="lanclient-view">  
                             <header>
                                 <div class="lanclient-view">
-                                        <button class="btn btn-dark" id="menu-toggle">tt</button>  
+                                        <button class="btn btn-dark" id="menu-toggle"><i class="fas fa-bars"></i></button>  
                                     <span class="active">
                                         <a href="">Project Info</a> 
                                         </span> 
